<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>als_ros</name>
  <version>0.0.0</version>
  <description>The als_ros package</description>

  <maintainer email="n.akai.goo@gmail.com">akai</maintainer>

  <license>Apache License 2.0</license>

  <author email="n.akai.goo@gmail.com">Naoki Akai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <!-- <build_depend>rospy</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <!-- <exec_depend>rospy</exec_depend> -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>


  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
